--- a/scss/style.scss
+++ b/scss/style.scss
@@ -361,120 +361,120 @@ main {
         }
     }
 
-    #worksWrap {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        padding: 20px;
+    // #worksWrap {
+    //     width: 100%;
+    //     height: 100%;
+    //     margin: 0 auto;
+    //     padding: 20px;
 
-        .worksttl {
-            border-bottom: 3px #C11717 solid;
-            width: 14%;
-            text-align: center;
-            margin-bottom: 20px;
+    //     .worksttl {
+    //         border-bottom: 3px #C11717 solid;
+    //         width: 14%;
+    //         text-align: center;
+    //         margin-bottom: 20px;
 
-        }
+    //     }
 
-        .worksmain {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            gap: 50px;
+    //     .worksmain {
+    //         display: grid;
+    //         grid-template-columns: repeat(2, 1fr);
+    //         grid-template-rows: repeat(3, 1fr);
+    //         gap: 50px;
 
-            figure {
-                width: 100%;
+    //         figure {
+    //             width: 100%;
 
-                img {
-                    width: 100%;
-                }
-            }
+    //             img {
+    //                 width: 100%;
+    //             }
+    //         }
 
-            .work1 {
-                figure {
-                    background: url(../img/logo/chittle.png) center center / cover no-repeat;
-                    border: dashed 5px #33a864;
+    //         .work1 {
+    //             figure {
+    //                 background: url(../img/logo/chittle.png) center center / cover no-repeat;
+    //                 border: dashed 5px #33a864;
 
-                    img {
-                        transition: 0.3s ease-in-out;
-                        opacity: 0;
-                        display: block;
-                    }
+    //                 img {
+    //                     transition: 0.3s ease-in-out;
+    //                     opacity: 0;
+    //                     display: block;
+    //                 }
 
-                    &:hover img {
-                        opacity: 1;
-                    }
-                }
-            }
+    //                 &:hover img {
+    //                     opacity: 1;
+    //                 }
+    //             }
+    //         }
 
-            .work2 {
-                figure {
-                    background: url(../img/logo/nemu.png) center center / 50% no-repeat;
-                    border: dashed 5px #612674;
+    //         .work2 {
+    //             figure {
+    //                 background: url(../img/logo/nemu.png) center center / 50% no-repeat;
+    //                 border: dashed 5px #612674;
 
-                    img {
-                        transition: 0.3s ease-in-out;
-                        opacity: 0;
-                        display: block;
-                    }
+    //                 img {
+    //                     transition: 0.3s ease-in-out;
+    //                     opacity: 0;
+    //                     display: block;
+    //                 }
 
-                    &:hover img {
-                        opacity: 1;
-                    }
-                }
-            }
+    //                 &:hover img {
+    //                     opacity: 1;
+    //                 }
+    //             }
+    //         }
 
-            .work3 {
-                figure {
-                    background: url(../img/logo/62resto.png) center center / cover no-repeat;
-                    border: dashed 5px #cac5ab;
+    //         .work3 {
+    //             figure {
+    //                 background: url(../img/logo/62resto.png) center center / cover no-repeat;
+    //                 border: dashed 5px #cac5ab;
 
-                    img {
-                        transition: 0.3s ease-in-out;
-                        opacity: 0;
-                        display: block;
-                    }
+    //                 img {
+    //                     transition: 0.3s ease-in-out;
+    //                     opacity: 0;
+    //                     display: block;
+    //                 }
 
-                    &:hover img {
-                        opacity: 1;
-                    }
-                }
-            }
+    //                 &:hover img {
+    //                     opacity: 1;
+    //                 }
+    //             }
+    //         }
 
-            .work4 {
-                figure {
-                    background: url(../img/logo/xco.png) center center / 50% no-repeat;
-                    border: 5px dashed #f3f3f3;
+    //         .work4 {
+    //             figure {
+    //                 background: url(../img/logo/xco.png) center center / 50% no-repeat;
+    //                 border: 5px dashed #f3f3f3;
 
-                    img {
-                        transition: 0.3s ease-in-out;
-                        opacity: 0;
-                        display: block;
-                    }
+    //                 img {
+    //                     transition: 0.3s ease-in-out;
+    //                     opacity: 0;
+    //                     display: block;
+    //                 }
 
-                    &:hover img {
-                        opacity: 1;
-                    }
-                }
-            }
+    //                 &:hover img {
+    //                     opacity: 1;
+    //                 }
+    //             }
+    //         }
 
-            .work5 {
-                figure {
-                    background: url(../img/logo/tdl.png) center center / 100% no-repeat;
-                    border: dashed 5px skyblue;
+    //         .work5 {
+    //             figure {
+    //                 background: url(../img/logo/tdl.png) center center / 100% no-repeat;
+    //                 border: dashed 5px skyblue;
 
-                    img {
-                        transition: 0.3s ease-in-out;
-                        opacity: 0;
-                        display: block;
-                    }
+    //                 img {
+    //                     transition: 0.3s ease-in-out;
+    //                     opacity: 0;
+    //                     display: block;
+    //                 }
 
-                    &:hover img {
-                        opacity: 1;
-                    }
-                }
-            }
-        }
-    }
+    //                 &:hover img {
+    //                     opacity: 1;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 
     #cntctWrap {
         width: 100%;
