--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,24 @@ main #profWrap .profMain .classwrap .classcode .classrtrn {
 main #profWrap .profMain .classwrap .classcode .classname {
   color: #e06c75;
 }
+main #worksWrap {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+main #worksWrap .worksttl {
+  border-bottom: 3px #C11717 solid;
+  width: 14%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+main #worksWrap .worksmain {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 50px;
+}
 main #cntctWrap {
   width: 100%;
   height: 80vh;
