--- a/scss/style.scss
+++ b/scss/style.scss
@@ -151,7 +151,7 @@ header {
                 width: 100px;
                 height: 40px;
                 text-align: center;
-                
+
                 a {
                     margin: 0 auto;
                     position: inherit;
@@ -299,14 +299,15 @@ main {
             text-align: center;
             margin-bottom: 20px;
         }
+
         .profMain {
             font-size: 1.2rem;
-    
+
             .classwrap {
                 position: relative;
                 z-index: 2;
                 left: 5%;
-    
+
                 &::before {
                     content: attr(data-value);
                     display: block;
@@ -317,42 +318,42 @@ main {
                     margin: auto;
                     text-align: end;
                 }
-    
+
                 .classcode {
                     display: block;
                     width: 90%;
-    
+
                     &:hover {
                         background: #1f2935;
                     }
-    
+
                     .classbrckt {
                         color: #e5c07b;
                     }
-    
+
                     .classtype {
                         color: #61afef;
                         margin-left: 65px;
                     }
-    
+
                     .classel {
                         color: #C11717;
                     }
-    
+
                     .classprod {
                         color: #c678dd;
                     }
-    
+
                     .classhead {
                         color: #98c379;
                         margin-left: 100px;
                     }
-    
+
                     .classrtrn {
                         color: #55c9ba;
                         margin-left: 100px;
                     }
-    
+
                     .classname {
                         color: #e06c75;
                     }
@@ -361,120 +362,29 @@ main {
         }
     }
 
-    // #worksWrap {
-    //     width: 100%;
-    //     height: 100%;
-    //     margin: 0 auto;
-    //     padding: 20px;
+    #worksWrap {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        padding: 20px;
 
-    //     .worksttl {
-    //         border-bottom: 3px #C11717 solid;
-    //         width: 14%;
-    //         text-align: center;
-    //         margin-bottom: 20px;
+        .worksttl {
+            border-bottom: 3px #C11717 solid;
+            width: 14%;
+            text-align: center;
+            margin-bottom: 20px;
 
-    //     }
+        }
 
-    //     .worksmain {
-    //         display: grid;
-    //         grid-template-columns: repeat(2, 1fr);
-    //         grid-template-rows: repeat(3, 1fr);
-    //         gap: 50px;
+        .worksmain {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            gap: 50px;
 
-    //         figure {
-    //             width: 100%;
-
-    //             img {
-    //                 width: 100%;
-    //             }
-    //         }
-
-    //         .work1 {
-    //             figure {
-    //                 background: url(../img/logo/chittle.png) center center / cover no-repeat;
-    //                 border: dashed 5px #33a864;
-
-    //                 img {
-    //                     transition: 0.3s ease-in-out;
-    //                     opacity: 0;
-    //                     display: block;
-    //                 }
-
-    //                 &:hover img {
-    //                     opacity: 1;
-    //                 }
-    //             }
-    //         }
-
-    //         .work2 {
-    //             figure {
-    //                 background: url(../img/logo/nemu.png) center center / 50% no-repeat;
-    //                 border: dashed 5px #612674;
-
-    //                 img {
-    //                     transition: 0.3s ease-in-out;
-    //                     opacity: 0;
-    //                     display: block;
-    //                 }
-
-    //                 &:hover img {
-    //                     opacity: 1;
-    //                 }
-    //             }
-    //         }
-
-    //         .work3 {
-    //             figure {
-    //                 background: url(../img/logo/62resto.png) center center / cover no-repeat;
-    //                 border: dashed 5px #cac5ab;
-
-    //                 img {
-    //                     transition: 0.3s ease-in-out;
-    //                     opacity: 0;
-    //                     display: block;
-    //                 }
-
-    //                 &:hover img {
-    //                     opacity: 1;
-    //                 }
-    //             }
-    //         }
-
-    //         .work4 {
-    //             figure {
-    //                 background: url(../img/logo/xco.png) center center / 50% no-repeat;
-    //                 border: 5px dashed #f3f3f3;
-
-    //                 img {
-    //                     transition: 0.3s ease-in-out;
-    //                     opacity: 0;
-    //                     display: block;
-    //                 }
-
-    //                 &:hover img {
-    //                     opacity: 1;
-    //                 }
-    //             }
-    //         }
-
-    //         .work5 {
-    //             figure {
-    //                 background: url(../img/logo/tdl.png) center center / 100% no-repeat;
-    //                 border: dashed 5px skyblue;
-
-    //                 img {
-    //                     transition: 0.3s ease-in-out;
-    //                     opacity: 0;
-    //                     display: block;
-    //                 }
-
-    //                 &:hover img {
-    //                     opacity: 1;
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
+        }
+    }
+    
 
     #cntctWrap {
         width: 100%;
@@ -521,7 +431,7 @@ main {
                     color: #F5f5f5;
                     font-size: 0.8em;
 
-                    &:hover~span{
+                    &:hover~span {
                         color: #C11717;
                     }
 
@@ -576,7 +486,7 @@ main {
                     font-size: 0.8em;
                     resize: none;
 
-                    &:hover~span{
+                    &:hover~span {
                         color: #C11717;
                     }
 
