--- a/css/style.css
+++ b/css/style.css
@@ -172,24 +172,25 @@ main .ttl {
   font-size: 1rem;
   top: 30px;
 }
-main .mainVis {
+
+.mainVis {
   height: 100vh;
 }
-main .mainVis #mainTxt {
+.mainVis #mainTxt {
   top: 20%;
   position: relative;
   width: 50%;
   height: 100%;
 }
-main .mainVis #mainTxt h2 {
+.mainVis #mainTxt h2 {
   font-size: 3rem;
 }
-main .mainVis #mainTxt #svg {
+.mainVis #mainTxt #svg {
   position: relative;
   top: 10px;
 }
-main .mainVis #mainTxt #svg,
-main .mainVis #mainTxt #svg path {
+.mainVis #mainTxt #svg,
+.mainVis #mainTxt #svg path {
   fill: none;
   stroke: #C11717;
   stroke-width: 5px;
@@ -204,42 +205,43 @@ main .mainVis #mainTxt #svg path {
     stroke-dashoffset: 0;
   }
 }
-main .mainVis #mainTxt p {
+.mainVis #mainTxt p {
   font-size: 1.7rem;
 }
-main #aboutWrap {
+
+#aboutWrap {
   width: 100%;
   height: 70vh;
   margin: 0 auto;
   padding: 20px;
 }
-main #aboutWrap .aboutTtl {
+#aboutWrap .aboutTtl {
   font-size: 1.2rem;
   border-bottom: #C11717 3px solid;
   width: 12%;
   text-align: center;
   margin-bottom: 20px;
 }
-main #aboutWrap .aboutMain {
+#aboutWrap .aboutMain {
   width: 100%;
   height: 100%;
   display: flex;
 }
-main #aboutWrap .aboutMain .aboutMe {
+#aboutWrap .aboutMain .aboutMe {
   width: 55%;
   height: 50%;
   margin: auto 10;
   position: relative;
   top: 5%;
 }
-main #aboutWrap .aboutMain .aboutMe p {
+#aboutWrap .aboutMain .aboutMe p {
   font-family: "DotGothic16", sans-serif;
   width: 80%;
   margin: 0 auto;
   height: 100%;
   font-size: 1rem;
 }
-main #aboutWrap .aboutMain .aboutPic {
+#aboutWrap .aboutMain .aboutPic {
   border: #F5f5f5 solid 3px;
   border-radius: 10px;
   width: 350px;
@@ -247,28 +249,29 @@ main #aboutWrap .aboutMain .aboutPic {
   background: url(../img/main.jpeg) left top/cover;
   margin: 0 auto;
 }
-main #profWrap {
+
+#profWrap {
   width: 100%;
   height: 70vh;
   margin: 0 auto;
   padding: 20px;
 }
-main #profWrap .profTtl {
+#profWrap .profTtl {
   font-size: 1.2rem;
   border-bottom: #C11717 3px solid;
   width: 14%;
   text-align: center;
   margin-bottom: 20px;
 }
-main #profWrap .profMain {
+#profWrap .profMain {
   font-size: 1.2rem;
 }
-main #profWrap .profMain .classwrap {
+#profWrap .profMain .classwrap {
   position: relative;
   z-index: 2;
   left: 5%;
 }
-main #profWrap .profMain .classwrap::before {
+#profWrap .profMain .classwrap::before {
   content: attr(data-value);
   display: block;
   width: 20px;
@@ -278,68 +281,70 @@ main #profWrap .profMain .classwrap::before {
   margin: auto;
   text-align: end;
 }
-main #profWrap .profMain .classwrap .classcode {
+#profWrap .profMain .classwrap .classcode {
   display: block;
   width: 90%;
 }
-main #profWrap .profMain .classwrap .classcode:hover {
+#profWrap .profMain .classwrap .classcode:hover {
   background: #1f2935;
 }
-main #profWrap .profMain .classwrap .classcode .classbrckt {
+#profWrap .profMain .classwrap .classcode .classbrckt {
   color: #e5c07b;
 }
-main #profWrap .profMain .classwrap .classcode .classtype {
+#profWrap .profMain .classwrap .classcode .classtype {
   color: #61afef;
   margin-left: 65px;
 }
-main #profWrap .profMain .classwrap .classcode .classel {
+#profWrap .profMain .classwrap .classcode .classel {
   color: #C11717;
 }
-main #profWrap .profMain .classwrap .classcode .classprod {
+#profWrap .profMain .classwrap .classcode .classprod {
   color: #c678dd;
 }
-main #profWrap .profMain .classwrap .classcode .classhead {
+#profWrap .profMain .classwrap .classcode .classhead {
   color: #98c379;
   margin-left: 100px;
 }
-main #profWrap .profMain .classwrap .classcode .classrtrn {
+#profWrap .profMain .classwrap .classcode .classrtrn {
   color: #55c9ba;
   margin-left: 100px;
 }
-main #profWrap .profMain .classwrap .classcode .classname {
+#profWrap .profMain .classwrap .classcode .classname {
   color: #e06c75;
 }
-main #worksWrap {
+
+#worksWrap {
   width: 100%;
-  height: 100%;
   margin: 0 auto;
   padding: 20px;
+  border: solid 1px skyblue;
 }
-main #worksWrap .worksttl {
+#worksWrap .worksttl {
   border-bottom: 3px #C11717 solid;
   width: 14%;
   text-align: center;
   margin-bottom: 20px;
 }
-main #worksWrap .worksmain {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+#worksWrap .worksmain {
+  display: flex;
   gap: 50px;
+  overflow-x: scroll;
+  border: solid 2px tomato;
 }
-main #cntctWrap {
+
+#cntctWrap {
   width: 100%;
   height: 80vh;
   margin: 0 auto;
   padding: 20px;
 }
-main #cntctWrap .cntctTtl {
+#cntctWrap .cntctTtl {
   border-bottom: 3px #C11717 solid;
   width: 18%;
   text-align: center;
   margin-bottom: 20px;
 }
-main #cntctWrap .inputWrap {
+#cntctWrap .inputWrap {
   padding: 20px;
   display: flex;
   flex-wrap: wrap;
@@ -352,10 +357,10 @@ main #cntctWrap .inputWrap {
   -webkit-box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
   box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
 }
-main #cntctWrap .inputWrap span {
+#cntctWrap .inputWrap span {
   font-family: "DotGothic16", sans-serif;
 }
-main #cntctWrap .inputWrap .inputBox {
+#cntctWrap .inputWrap .inputBox {
   margin: 0 auto;
   position: relative;
   width: 40%;
@@ -363,17 +368,17 @@ main #cntctWrap .inputWrap .inputBox {
   font-family: "DotGothic16", sans-serif;
   top: 5%;
 }
-main #cntctWrap .inputWrap .inputBox input {
+#cntctWrap .inputWrap .inputBox input {
   width: 100%;
   padding: 10px;
   outline: none;
   color: #F5f5f5;
   font-size: 0.8em;
 }
-main #cntctWrap .inputWrap .inputBox input:hover ~ span {
+#cntctWrap .inputWrap .inputBox input:hover ~ span {
   color: #C11717;
 }
-main #cntctWrap .inputWrap .inputBox input:valid ~ span, main #cntctWrap .inputWrap .inputBox input:focus ~ span {
+#cntctWrap .inputWrap .inputBox input:valid ~ span, #cntctWrap .inputWrap .inputBox input:focus ~ span {
   color: #C11717;
   transform: translateX(2px) translateY(-17px);
   font-size: 0.6em;
@@ -381,16 +386,16 @@ main #cntctWrap .inputWrap .inputBox input:valid ~ span, main #cntctWrap .inputW
   background: none;
   letter-spacing: 0.2em;
 }
-main #cntctWrap .inputWrap .inputBox input:focus ~ .line {
+#cntctWrap .inputWrap .inputBox input:focus ~ .line {
   background-color: #C11717;
 }
-main #cntctWrap .inputWrap .inputBox .line {
+#cntctWrap .inputWrap .inputBox .line {
   width: 100%;
   background-color: #f5f5f5;
   height: 2px;
   transition: 0.2s ease-in-out;
 }
-main #cntctWrap .inputWrap .inputBox span {
+#cntctWrap .inputWrap .inputBox span {
   position: absolute;
   left: 0;
   padding: 10px;
@@ -400,13 +405,13 @@ main #cntctWrap .inputWrap .inputBox span {
   text-transform: uppercase;
   transition: 0.3s ease-in-out;
 }
-main #cntctWrap .inputWrap .txtarea {
+#cntctWrap .inputWrap .txtarea {
   width: 90%;
   height: 10%;
   margin: 0 auto;
   position: relative;
 }
-main #cntctWrap .inputWrap .txtarea textarea {
+#cntctWrap .inputWrap .txtarea textarea {
   width: 100%;
   padding: 10px;
   outline: none;
@@ -414,10 +419,10 @@ main #cntctWrap .inputWrap .txtarea textarea {
   font-size: 0.8em;
   resize: none;
 }
-main #cntctWrap .inputWrap .txtarea textarea:hover ~ span {
+#cntctWrap .inputWrap .txtarea textarea:hover ~ span {
   color: #C11717;
 }
-main #cntctWrap .inputWrap .txtarea textarea:valid ~ span, main #cntctWrap .inputWrap .txtarea textarea:focus ~ span {
+#cntctWrap .inputWrap .txtarea textarea:valid ~ span, #cntctWrap .inputWrap .txtarea textarea:focus ~ span {
   color: #C11717;
   transform: translateX(2px) translateY(-17px);
   font-size: 0.6em;
@@ -425,16 +430,16 @@ main #cntctWrap .inputWrap .txtarea textarea:valid ~ span, main #cntctWrap .inpu
   background: none;
   letter-spacing: 0.2em;
 }
-main #cntctWrap .inputWrap .txtarea textarea:focus ~ .line {
+#cntctWrap .inputWrap .txtarea textarea:focus ~ .line {
   background-color: #C11717;
 }
-main #cntctWrap .inputWrap .txtarea .line {
+#cntctWrap .inputWrap .txtarea .line {
   width: 100%;
   background-color: #f5f5f5;
   height: 2px;
   transition: 0.2s ease-in-out;
 }
-main #cntctWrap .inputWrap .txtarea span {
+#cntctWrap .inputWrap .txtarea span {
   position: absolute;
   left: 5px;
   top: -10px;
