--- a/scss/style.scss
+++ b/scss/style.scss
@@ -194,337 +194,338 @@ main {
         top: 30px;
     }
 
-    .mainVis {
-        height: 100vh;
+}
 
-        #mainTxt {
-            top: 20%;
-            position: relative;
-            width: 50%;
-            height: 100%;
+.mainVis {
+    height: 100vh;
 
-            h2 {
-                font-size: 3rem;
-            }
-
-            #svg {
-                position: relative;
-                top: 10px;
-
-                &,
-                path {
-                    fill: none;
-                    stroke: #C11717;
-                    stroke-width: 5px;
-                    stroke-dasharray: 710px;
-                    stroke-dashoffset: 650px;
-                    stroke-linecap: round;
-                    stroke-linejoin: round;
-                    animation: drawStroke 3s linear forwards;
-                }
-
-                @keyframes drawStroke {
-                    100% {
-                        stroke-dashoffset: 0;
-                    }
-                }
-
-            }
-
-            p {
-                font-size: 1.7rem;
-            }
-        }
-    }
-
-    #aboutWrap {
-        width: 100%;
-        height: 70vh;
-        margin: 0 auto;
-        padding: 20px;
-
-
-        .aboutTtl {
-            font-size: 1.2rem;
-            border-bottom: #C11717 3px solid;
-            width: 12%;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .aboutMain {
-            width: 100%;
-            height: 100%;
-            display: flex;
-
-            .aboutMe {
-                width: 55%;
-                height: 50%;
-                margin: auto 10;
-                position: relative;
-                top: 5%;
-
-                p {
-                    font-family: 'DotGothic16', sans-serif;
-                    width: 80%;
-                    margin: 0 auto;
-                    height: 100%;
-                    font-size: 1rem;
-                }
-            }
-
-            .aboutPic {
-                border: #F5f5f5 solid 3px;
-                border-radius: 10px;
-                width: 350px;
-                height: 550px;
-                background: url(../img/main.jpeg) left top/cover;
-                margin: 0 auto;
-            }
-        }
-
-    }
-
-    #profWrap {
-        width: 100%;
-        height: 70vh;
-        margin: 0 auto;
-        padding: 20px;
-
-
-        .profTtl {
-            font-size: 1.2rem;
-            border-bottom: #C11717 3px solid;
-            width: 14%;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .profMain {
-            font-size: 1.2rem;
-
-            .classwrap {
-                position: relative;
-                z-index: 2;
-                left: 5%;
-
-                &::before {
-                    content: attr(data-value);
-                    display: block;
-                    width: 20px;
-                    height: 100%;
-                    position: absolute;
-                    left: -50px;
-                    margin: auto;
-                    text-align: end;
-                }
-
-                .classcode {
-                    display: block;
-                    width: 90%;
-
-                    &:hover {
-                        background: #1f2935;
-                    }
-
-                    .classbrckt {
-                        color: #e5c07b;
-                    }
-
-                    .classtype {
-                        color: #61afef;
-                        margin-left: 65px;
-                    }
-
-                    .classel {
-                        color: #C11717;
-                    }
-
-                    .classprod {
-                        color: #c678dd;
-                    }
-
-                    .classhead {
-                        color: #98c379;
-                        margin-left: 100px;
-                    }
-
-                    .classrtrn {
-                        color: #55c9ba;
-                        margin-left: 100px;
-                    }
-
-                    .classname {
-                        color: #e06c75;
-                    }
-                }
-            }
-        }
-    }
-
-    #worksWrap {
-        width: 100%;
+    #mainTxt {
+        top: 20%;
+        position: relative;
+        width: 50%;
         height: 100%;
-        margin: 0 auto;
-        padding: 20px;
 
-        .worksttl {
-            border-bottom: 3px #C11717 solid;
-            width: 14%;
-            text-align: center;
-            margin-bottom: 20px;
-
+        h2 {
+            font-size: 3rem;
         }
 
-        .worksmain {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            gap: 50px;
+        #svg {
+            position: relative;
+            top: 10px;
 
-        }
-    }
-    
-
-    #cntctWrap {
-        width: 100%;
-        height: 80vh;
-        margin: 0 auto;
-        padding: 20px;
-
-        .cntctTtl {
-            border-bottom: 3px #C11717 solid;
-            width: 18%;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .inputWrap {
-            padding: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            width: 80%;
-            height: 80%;
-            margin: 0 auto;
-            margin-top: 50px;
-            background: #232f3a;
-            border-radius: 10px;
-            -webkit-box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
-            box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
-
-            span {
-                font-family: 'DotGothic16', sans-serif;
+            &,
+            path {
+                fill: none;
+                stroke: #C11717;
+                stroke-width: 5px;
+                stroke-dasharray: 710px;
+                stroke-dashoffset: 650px;
+                stroke-linecap: round;
+                stroke-linejoin: round;
+                animation: drawStroke 3s linear forwards;
             }
 
-            .inputBox {
-                margin: 0 auto;
-                position: relative;
-                width: 40%;
-                height: 20%;
-                font-family: 'DotGothic16', sans-serif;
-                top: 5%;
-
-                input {
-                    width: 100%;
-                    padding: 10px;
-                    outline: none;
-                    color: #F5f5f5;
-                    font-size: 0.8em;
-
-                    &:hover~span {
-                        color: #C11717;
-                    }
-
-                    &:valid~span,
-                    &:focus~span {
-                        color: #C11717;
-                        transform: translateX(2px) translateY(-17px);
-                        font-size: 0.6em;
-                        padding: 0 10px;
-                        background: none;
-                        letter-spacing: 0.2em;
-                    }
-
-                    &:focus~.line {
-                        background-color: #C11717;
-                    }
-
-                }
-
-                .line {
-                    width: 100%;
-                    background-color: #f5f5f5;
-                    height: 2px;
-                    transition: 0.2s ease-in-out;
-                }
-
-                span {
-                    position: absolute;
-                    left: 0;
-                    padding: 10px;
-                    pointer-events: none;
-                    font-size: 0.8em;
-                    color: #c8c8c8;
-                    text-transform: uppercase;
-                    transition: 0.3s ease-in-out;
-                }
-
-
-            }
-
-            .txtarea {
-                width: 90%;
-                height: 10%;
-                margin: 0 auto;
-                position: relative;
-
-                textarea {
-                    width: 100%;
-                    padding: 10px;
-                    outline: none;
-                    color: #F5f5f5;
-                    font-size: 0.8em;
-                    resize: none;
-
-                    &:hover~span {
-                        color: #C11717;
-                    }
-
-                    &:valid~span,
-                    &:focus~span {
-                        color: #C11717;
-                        transform: translateX(2px) translateY(-17px);
-                        font-size: 0.6em;
-                        padding: 0 10px;
-                        background: none;
-                        letter-spacing: 0.2em;
-                    }
-
-                    &:focus~.line {
-                        background-color: #C11717;
-                    }
-                }
-
-                .line {
-                    width: 100%;
-                    background-color: #f5f5f5;
-                    height: 2px;
-                    transition: 0.2s ease-in-out;
-                }
-
-                span {
-                    position: absolute;
-                    left: 5px;
-                    top: -10px;
-                    padding: 10px;
-                    pointer-events: none;
-                    font-size: 0.8em;
-                    color: #c8c8c8;
-                    text-transform: uppercase;
-                    transition: 0.3s ease-in-out;
+            @keyframes drawStroke {
+                100% {
+                    stroke-dashoffset: 0;
                 }
             }
 
+        }
+
+        p {
+            font-size: 1.7rem;
         }
     }
 }
+
+#aboutWrap {
+    width: 100%;
+    height: 70vh;
+    margin: 0 auto;
+    padding: 20px;
+
+
+    .aboutTtl {
+        font-size: 1.2rem;
+        border-bottom: #C11717 3px solid;
+        width: 12%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .aboutMain {
+        width: 100%;
+        height: 100%;
+        display: flex;
+
+        .aboutMe {
+            width: 55%;
+            height: 50%;
+            margin: auto 10;
+            position: relative;
+            top: 5%;
+
+            p {
+                font-family: 'DotGothic16', sans-serif;
+                width: 80%;
+                margin: 0 auto;
+                height: 100%;
+                font-size: 1rem;
+            }
+        }
+
+        .aboutPic {
+            border: #F5f5f5 solid 3px;
+            border-radius: 10px;
+            width: 350px;
+            height: 550px;
+            background: url(../img/main.jpeg) left top/cover;
+            margin: 0 auto;
+        }
+    }
+
+}
+
+#profWrap {
+    width: 100%;
+    height: 70vh;
+    margin: 0 auto;
+    padding: 20px;
+
+
+    .profTtl {
+        font-size: 1.2rem;
+        border-bottom: #C11717 3px solid;
+        width: 14%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .profMain {
+        font-size: 1.2rem;
+
+        .classwrap {
+            position: relative;
+            z-index: 2;
+            left: 5%;
+
+            &::before {
+                content: attr(data-value);
+                display: block;
+                width: 20px;
+                height: 100%;
+                position: absolute;
+                left: -50px;
+                margin: auto;
+                text-align: end;
+            }
+
+            .classcode {
+                display: block;
+                width: 90%;
+
+                &:hover {
+                    background: #1f2935;
+                }
+
+                .classbrckt {
+                    color: #e5c07b;
+                }
+
+                .classtype {
+                    color: #61afef;
+                    margin-left: 65px;
+                }
+
+                .classel {
+                    color: #C11717;
+                }
+
+                .classprod {
+                    color: #c678dd;
+                }
+
+                .classhead {
+                    color: #98c379;
+                    margin-left: 100px;
+                }
+
+                .classrtrn {
+                    color: #55c9ba;
+                    margin-left: 100px;
+                }
+
+                .classname {
+                    color: #e06c75;
+                }
+            }
+        }
+    }
+}
+
+#worksWrap {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    border: solid 1px skyblue;
+
+    .worksttl {
+        border-bottom: 3px #C11717 solid;
+        width: 14%;
+        text-align: center;
+        margin-bottom: 20px;
+
+    }
+
+    .worksmain {
+        display: flex;
+        gap: 50px;
+        overflow-x: scroll;
+        border: solid 2px tomato;
+    }
+}
+
+#cntctWrap {
+    width: 100%;
+    height: 80vh;
+    margin: 0 auto;
+    padding: 20px;
+
+    .cntctTtl {
+        border-bottom: 3px #C11717 solid;
+        width: 18%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .inputWrap {
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        width: 80%;
+        height: 80%;
+        margin: 0 auto;
+        margin-top: 50px;
+        background: #232f3a;
+        border-radius: 10px;
+        -webkit-box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
+        box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
+
+        span {
+            font-family: 'DotGothic16', sans-serif;
+        }
+
+        .inputBox {
+            margin: 0 auto;
+            position: relative;
+            width: 40%;
+            height: 20%;
+            font-family: 'DotGothic16', sans-serif;
+            top: 5%;
+
+            input {
+                width: 100%;
+                padding: 10px;
+                outline: none;
+                color: #F5f5f5;
+                font-size: 0.8em;
+
+                &:hover~span {
+                    color: #C11717;
+                }
+
+                &:valid~span,
+                &:focus~span {
+                    color: #C11717;
+                    transform: translateX(2px) translateY(-17px);
+                    font-size: 0.6em;
+                    padding: 0 10px;
+                    background: none;
+                    letter-spacing: 0.2em;
+                }
+
+                &:focus~.line {
+                    background-color: #C11717;
+                }
+
+            }
+
+            .line {
+                width: 100%;
+                background-color: #f5f5f5;
+                height: 2px;
+                transition: 0.2s ease-in-out;
+            }
+
+            span {
+                position: absolute;
+                left: 0;
+                padding: 10px;
+                pointer-events: none;
+                font-size: 0.8em;
+                color: #c8c8c8;
+                text-transform: uppercase;
+                transition: 0.3s ease-in-out;
+            }
+
+
+        }
+
+        .txtarea {
+            width: 90%;
+            height: 10%;
+            margin: 0 auto;
+            position: relative;
+
+            textarea {
+                width: 100%;
+                padding: 10px;
+                outline: none;
+                color: #F5f5f5;
+                font-size: 0.8em;
+                resize: none;
+
+                &:hover~span {
+                    color: #C11717;
+                }
+
+                &:valid~span,
+                &:focus~span {
+                    color: #C11717;
+                    transform: translateX(2px) translateY(-17px);
+                    font-size: 0.6em;
+                    padding: 0 10px;
+                    background: none;
+                    letter-spacing: 0.2em;
+                }
+
+                &:focus~.line {
+                    background-color: #C11717;
+                }
+            }
+
+            .line {
+                width: 100%;
+                background-color: #f5f5f5;
+                height: 2px;
+                transition: 0.2s ease-in-out;
+            }
+
+            span {
+                position: absolute;
+                left: 5px;
+                top: -10px;
+                padding: 10px;
+                pointer-events: none;
+                font-size: 0.8em;
+                color: #c8c8c8;
+                text-transform: uppercase;
+                transition: 0.3s ease-in-out;
+            }
+        }
+
+    }
+}
+
+
